@@ -24,6 +24,10 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - Startup config file now uses a custom hyper-minimalist format
       which avoids the need to load YAML::Tiny before the first thread
       spawn, saving about 400k per thread (ADAMK)
+    - Padre::Logger now allows the PADRE_DEBUG environment variable to be
+      set to a specific class name, enabling logging only for that class.
+      This simplies tracing around a specific problem now that the number
+      of classes with debugging hooks is getting large (ADAMK)
 
 0.64 2010.06.12
     - Last Stable before merge of new Task 2.0 API
